# CryptoUniverse

./: .env  .env.example  .env.local  .env.render.example  .gitignore  AB_TESTING_IMPLEMENTATION_COMPLETE.md  ACCURATE_MERGE_77396f2_ANALYSIS.md  ADMIN_TESTING_GUIDE.md  AI_CHAT_IMPLEMENTATION_SUMMARY.md  AI_CHAT_ISSUES_AND_SOLUTIONS.md  AI_CONSENSUS_IMPLEMENTATION_REPORT.md  AI_IMPLEMENTATION_ANALYSIS_REPORT.md  BACKEND_AUDIT.md  BACKTEST_FEATURE_TEST_REPORT.md  BACKTEST_TEST_SUMMARY.md  BACKTEST_TRADE_DATA_ACCESS.md  BRANCH_ANALYSIS.md  BRANCH_CONTENTS_SUMMARY.md  BRANCH_FIXES_CONFIRMATION.md  CHAT_IMPROVEMENT_NEEDED.md  CHAT_INTEGRATION_ANALYSIS_REPORT.md  CHAT_UNIFICATION_MIGRATION.md  CLEAN_ARCHITECTURE_FINAL.md  CLEAN_UNIFIED_ARCHITECTURE.md  CODE_REVIEW_COMPLETE_CONFIRMATION.md  CODE_REVIEW_FIXES_APPLIED.md  CODE_REVIEW_FIXES_COMPLETE.md  CODE_REVIEW_REPORT.md  COMMITS_PUSHED_CONFIRMATION.md  COMPLETE_ENTERPRISE_FIXES_SUMMARY.md  COMPLETE_FIX_ANALYSIS.md  COMPLETE_FUNCTION_AUDIT.md  COMPREHENSIVE_CHAT_SYSTEM_ANALYSIS.md  COMPREHENSIVE_FIXES_REPORT.md  COMPREHENSIVE_SECURITY_FIXES_FINAL.md  COMPREHENSIVE_SYSTEM_FIXES_APPLIED.md  CONFIGURATION_AUDIT_REPORT.md  CONFLICTS_RESOLVED_READY_FOR_MERGE.md  CONFLICT_RESOLUTION_SUMMARY.md  CONVERSATIONAL_AI_IMPLEMENTATION_COMPLETE.md  (+702 more)
.claude/: settings.local.json
.claude/agents/: codebase-auditor.md
.github/workflows/: test.yml
.kiro/steering/: product.md  structure.md  tech.md
alembic/: env.py
alembic/versions/: 001_add_user_id_to_trades.py  001_initial_schema.py  002_add_exchange_account_indexes.py  003_add_performance_indexes.py  004_targeted_performance_fix.py  006_add_live_strategy_performance_table.py  (+19 more)
app/: __init__.py
backup_TESTSPRITE_FIX_1756974195/: auth.py.original
debug_outputs/: chat_response_20250916_122056.json  chat_response_20250916_140428.json  chat_response_20250916_140914.json  opportunity_discovery_20250916_122056.json  opportunity_discovery_20250916_140428.json  opportunity_discovery_20250916_140914.json  user_strategies_20250916_140914.json
docs/: CODERABBIT_FIXES_SUMMARY.md  FINAL_CODERABBIT_VERIFICATION.md  MARKET_ANALYSIS_CHANGES.md  UNIFIED_PRICE_SERVICE_INTEGRATION.md  manual_trading_dashboard_evidence.md  market_analysis_enterprise_plan.md  opportunity_scan_fix_evaluation.md  signal_delivery_integration_plan.md  signal_delivery_todo.md
frontend/: .env.production  Dockerfile  build.sh  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  render-frontend.yaml  tailwind.config.js  tsconfig.json  vite.config.production.ts  vite.config.ts  vite.config.ts.timestamp-1756455610169-df7aba18a42f1.mjs
investigations/: opportunity_timeout_analysis.md
migrations/: 001_create_user_strategy_access.py  002_migrate_redis_strategy_data.py  README.md  supabase_001_security_fix_enable_rls_on_all_tables.sql  supabase_002_security_fix_auth_rls_initplan_optimization.sql  supabase_003_performance_fix_consolidate_permissive_policies.sql  supabase_004_security_fix_function_search_path.sql  supabase_005_security_fix_move_vector_extension.sql  supabase_006_security_fix_security_definer_views.sql  supabase_007_performance_fix_exchange_balances_upsert.sql  update_win_rate_data.py
redis-stable/: 00-RELEASENOTES  redis.conf
scripts/: render_build.sh
tests/: conftest.py  test_asyncio_compat.py  test_config.py  test_data_quality_guardrails.py  test_market_analysis_dedup.py  test_opportunity_discovery_pending.py  test_opportunity_stage_timeout.py  test_paper_trading_atomic_reset.py  test_policy_refresh_lock.py  test_portfolio_optimization_engine.py  test_portfolio_optimization_snapshot.py  test_price_preload_limits.py  test_real_backtesting_engine.py  test_strategy_performance_normalization.py  test_telegram_intent_classification.py  test_telegram_streaming.py  test_unified_chat_opportunity_streaming.py  test_web_concurrency_settings.py  test_win_rate_standardization.py
testsprite_tests/: .env.test  .env.test.example  render-deployment-test-report.md  testsprite-mcp-test-report.html  testsprite-mcp-test-report.md  testsprite_config.json
tools/: __init__.py  run_strategy_diagnostics.py
(+437 files in other folders)
